--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "next": "15.1.3",
     "pg": "^8.13.1",
     "react": "^19.0.0",
