--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "ioredis": "^5.4.2",
     "next": "15.1.3",
     "pg": "^8.13.1",
     "react": "^19.0.0",
