--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "date-fns": "^4.1.0",
+    "ethers": "^6.13.5",
     "ioredis": "^5.4.2",
     "next": "15.1.3",
     "pg": "^8.13.1",
