--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.98.0",
     "date-fns": "^4.1.0",
     "ethers": "^6.13.5",
     "ioredis": "^5.4.2",
